# home-lab-guardian

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  index.html  pyproject.toml  quickstart.sh  style.css
.github/workflows/: ci.yml
deploy/: hlg.service
src/hlg/: __init__.py  agent.py  cli.py  config.py  log_watcher.py
src/hlg/ai/: __init__.py  analyzer.py
src/hlg/notifiers/: __init__.py  discord.py  slack.py
src/hlg/parsers/: __init__.py  auth.py
tests/: test_auth_parser.py  test_cli.py
